<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:text="@string/ingrese_numero"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/ingrese_numero"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblNum1" />

    <TextView
        android:id="@+id/lblNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/ingrese_numero"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNum1" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/ingrese_numero"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblNum2" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_cero"
        android:textColor="@android:color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNum2" />

    <Button
        android:id="@+id/btnSumar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#E0E0E0"
        android:text="@string/operacion_suma"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toStartOf="@+id/btnRestar"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRestar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E0E0E0"
        android:text="@string/operacion_resta"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnSumar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSumar" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#E0E0E0"
        android:text="@string/operacion_multiplicacion"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDividir"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E0E0E0"
        android:text="@string/operacion_division"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnMultiplicar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar" />

</androidx.constraintlayout.widget.ConstraintLayout>
